@@ -11653,3 +11653,5 @@
 	  frequency.  Noted by Henry Zhang (2015-04-15).
 	* drivers/sensors/h1750fvi.c:  Add a character driver for Rohm Ambient
 	  Light Sensor BH1750FVI.  From Alan Carvalho de Assi (2016-04-15).
+	* configs/stm32f4discovery: Integrate BH1750FVI driver in the
+	  STM32F4Discovery board.  From Alan Carvalho de Assi (2016-04-15).
